k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-gitops
  name: hello-gitops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-gitops
  template:
    metadata:
      labels:
        app: hello-gitops
    spec:
      containers:
       - name: hello-gitops
         image: 560136187067.dkr.ecr.us-east-2.amazonaws.com/hello-gitops:latest
         imagePullPolicy: Always
         ports:
           - containerPort: 8080
